--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /TopicosAvanzados19A/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/MetodosNumericos/build/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/MetodosNumericos/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/MetodoBiseccion/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/MetodoBiseccion/build/
