--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/MetodoBiseccion/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/MetodoBiseccion/build/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa4/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa05/nbproject/private/
