se agrego ventas al proyecto integrador

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/MetodoBiseccion/build/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa4/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa05/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Ventas/nbproject/private/
