arreglo del programa09

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/AngularJS/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/EjemploAngularJS/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa09/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa10/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/programa11/nbproject/private/
