--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Formula/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Formula/build/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa13/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa14/nbproject/private/
