--- a/TopicosAvanzados19A/nbproject/project.properties
+++ b/TopicosAvanzados19A/nbproject/project.properties
@@ -1,5 +1,23 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-javascript-nodejs.enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.node_2e_default=true
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=true
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
 file.reference.public_html-pedro=public_html/pedro
+file.reference.public_html-Pedro_S_nchez=public_html/Pedro_S\u00e1nchez
 file.reference.TopicosAvanzados19A-public_html=public_html
 file.reference.TopicosAvanzados19A-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.TopicosAvanzados19A-public_html}
+start.file=index.html
+web.context.root=/TopicosAvanzados19A
