--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Formula/build/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa13/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa14/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa_15/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa_16/nbproject/private/
