--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa14/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa_15/nbproject/private/
 /TopicosAvanzados19A/public_html/Karen_Lopéz/Programa_16/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Media/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Media/build/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Promedios/nbproject/private/
+/TopicosAvanzados19A/public_html/Karen_Lopéz/Promedios/build/
